# dme-sorter

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
scripts/: build_wasi.ps1  setup_cosmo.sh  setup_w2c2.sh
src/: main.rs
wasi/: main.c
