[package]
name = "dme-sorter"
version = "0.1.0"
edition = "2024"
authors = ["Lucy <lucy@absolucy.moe>"]

[lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_to_string = "warn"

[dependencies]
imara-diff = { version = "0.2", optional = true }
vc-ltl = { version = "5.2.2-Beta1", optional = true }

[profile.release]
lto = "thin"
opt-level = "s"

[features]
default = ["diff"]
diff = ["imara-diff"]
